test/invalid/idl/callback-attribute.webidl
callback interface Attribute {
  attribute boolean attr;
};
